# cocotbext-qspi

./: .gitignore  README.md  old_README.md  pyproject.toml
cocotbext/qspi/: __init__.py  about.py  exceptions.py  qspi.py
cocotbext/qspi/devices/: generic.py
cocotbext/qspi/devices/Infineon/: S25HS256T.py
tests/qspi/: Makefile
tests/qspi_devices/Infineon/S25HS256T/: Makefile  test_S25HS256T.py  test_S25HS256T.v
tests/spi/: test_qspi.py  test_qspi.v  test_spi.py  test_spi.v
