[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]

[project]
name = "cocotbext-qspi"
description = "QSPI modules for cocotb"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Timo Braungardt"},
    {name = "Spencer Chang", email = "spencer@sycee.xyz"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dynamic = [
  "version",
]
dependencies = [
  "cocotb>=2.0.0",
]
[project.urls]
repository = "https://github.com/timo-braungardt/cocotbext-qspi"


[tool.setuptools_scm]
write_to = "cocotbext/qspi/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "--import-mode importlib"

[dependency-groups]
dev = [
    "cocotb-test>=0.2.6",
    "pytest>=8.3.5",
    "pytest-xdist>=3.6.1",
    "tox>=4.25.0",
    "debugpy>=1.8.21",
    "numpy>=2.4",
]
lint = [
    "flake8>=7.3.0",
]
